# drone-robotech

./: .gitattributes  .gitignore  README.md
Emitter/QT_Controller/: CMakeLists.txt  UDP.hpp  configuration.cpp  configuration.hpp  cube.qml  install-deps.sh  qtBoxConfiguration.cpp  qtDroneBox.cpp  qt_drone_controller.cpp  resources.qrc
Emitter/QT_Controller/packaging/: build-appimage.sh  drone_controller.desktop  qml-imports.qml
